inclusão do phpstan

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,7 @@ jobs:
       - name: Install composer
         run: composer install
 
+      - name: Execute static analysis [phpstan]
+        run: vendor/bin/phpstan analyse src/ -l 5 -vvv
+
 
