setando workflows separados

--- a/.github/workflows/phpmd.yml
+++ b/.github/workflows/phpmd.yml
@@ -1,27 +1,27 @@
 name: phpmd
 
-    on:
-      push:
-        branches: [ "main" ]
-      pull_request:
-        branches: [ "main" ]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
-    workflow_dispatch:
+  workflow_dispatch:
 
-    jobs:
-        phpmd:
-            name: PHPMD
-            runs-on: ubuntu-latest
+jobs:
+    bulild:
+        runs-on: ubuntu-latest
 
-            steps:
-                - name: Checkout
-                uses: actions/checkout@v2
+        steps:
+            - name: Checkout
+            uses: actions/checkout@v2
 
-                - name: Setup PHP environment
-                uses: shivammathur/setup-php@v2
-            with:
-              coverage: none
-              tools: phpmd
+            - name: Setup PHP environment
+            uses: shivammathur/setup-php@v2
 
-            - name: Run PHPMD
-            run: phpmd . github phpmd.ruleset.xml --exclude 'tests/*,vendor/*'
+        with:
+          coverage: none
+          tools: phpmd
+
+        - name: Run PHPMD
+        run: phpmd . github phpmd.ruleset.xml --exclude 'tests/*,vendor/*'
