--- a/.github/workflows/phpmd.yml
+++ b/.github/workflows/phpmd.yml
@@ -1,27 +1,22 @@
 name: phpmd
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    push:
+        branches: [ "main" ]
+        pull_request:
+        branches: [ "main" ]
 
-  workflow_dispatch:
+    workflow_dispatch:
 
 jobs:
     bulild:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Checkout
-            uses: actions/checkout@v2
+            uses: actions/checkout@v3
 
-            - name: Setup PHP environment
-            uses: shivammathur/setup-php@v2
+          - name: Install composer
+            run: composer install
 
-        with:
-          coverage: none
-          tools: phpmd
-
-        - name: Run PHPMD
-        run: phpmd . github phpmd.ruleset.xml --exclude 'tests/*,vendor/*'
+            - name: Run PHPMD
+            run: phpmd . github phpmd.ruleset.xml --exclude 'tests/*,vendor/*'
