--- a/.github/workflows/phpmd.yml
+++ b/.github/workflows/phpmd.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install composer
-        run: composer install
+      run: composer install
 
-        - name: Run PHPMD
-        run: phpmd . github phpmd.ruleset.xml --exclude 'tests/*,vendor/*'
+      - name: Run PHPMD
+      run: vendor/bin/phpmd . github phpmd.ruleset.xml --exclude 'tests/*,vendor/*'
