--- a/.github/workflows/phpmd.yml
+++ b/.github/workflows/phpmd.yml
@@ -1,22 +1,20 @@
 name: phpmd
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  workflow_dispatch:
+on: push
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+phpmd:
+name: PHPMD
+runs-on: ubuntu-latest
+steps:
+- name: Checkout
+uses: actions/checkout@v2
 
-    steps:
-      - uses: actions/checkout@v3
+- name: Setup PHP environment
+uses: shivammathur/setup-php@v2
+with:
+  coverage: none
+  tools: phpmd
 
-      - name: Install composer
-      run: composer install
-
-      - name: Run PHPMD
+- name: Run PHPMD
       run: vendor/bin/phpmd . github phpmd.ruleset.xml --exclude 'tests/*,vendor/*'
