--- a/.github/workflows/phpmd.yml
+++ b/.github/workflows/phpmd.yml
@@ -8,13 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup PHP environment
         uses: shivammathur/setup-php@v2
         with:
           coverage: none
           tools: phpmd
+
+      - name: Install composer
+        run: composer install
 
       - name: Run PHPMD
         run: vendor/bin/phpmd . github phpmd.ruleset.xml --exclude 'tests/*,vendor/*'
