--- a/.github/workflows/phpcdp.yml
+++ b/.github/workflows/phpcdp.yml
@@ -23,6 +23,9 @@ jobs:
     - name: PHP Copy Paste Detector
       # You may pin to the exact commit or the version.
       # uses: StephaneBour/actions-php-cpd@4b842d8ecc9f9a6a1abce48b78590e50eed3715b
-      uses: StephaneBour/actions-php-cpd@8.1
+      # uses: StephaneBour/actions-php-cpd@8.1
+      # with:
+      #   args: './src/'
+      uses: StephaneBour/actions-php-cpd@1.0
       with:
-        args: './src/'
+        dir: './src/'
