--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -5,7 +5,10 @@ permissions:
   pull-requests: write
 
 on:
+  push:
+    branches: [ "main" ]
   pull_request:
+    branches: [ "main" ]
     types: [opened, reopened, synchronize]
 
 jobs:
