--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -6,9 +6,9 @@ permissions:
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "*" ]
   pull_request:
-    branches: [ "main" ]
+    # branches: [ "main" ]
     types: [opened, reopened, synchronize]
 
 jobs:
