--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -1,4 +1,4 @@
-name: Code Review
+name: ChatGPT CodeReviewer
 
 permissions:
   contents: read
@@ -13,10 +13,12 @@ on:
 
 jobs:
   test:
+
     # if: ${{ contains(github.event.*.labels.*.name, 'gpt review') }} # Optional; to run only when a label is attached
     runs-on: ubuntu-latest
     steps:
-      - uses: anc95/ChatGPT-CodeReview@main
+      - uses: anc95/ChatGPT-CodeReview@v1.0.10
+      #- uses: anc95/ChatGPT-CodeReview@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
