--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -5,8 +5,6 @@ permissions:
   pull-requests: write
 
 on:
-  push:
-    branches: [ "*" ]
   pull_request:
     # branches: [ "main" ]
     types: [opened, reopened, synchronize]
@@ -17,8 +15,8 @@ jobs:
     # if: ${{ contains(github.event.*.labels.*.name, 'gpt review') }} # Optional; to run only when a label is attached
     runs-on: ubuntu-latest
     steps:
-      - uses: anc95/ChatGPT-CodeReview@v1.0.10
-      #- uses: anc95/ChatGPT-CodeReview@main
+      #- uses: anc95/ChatGPT-CodeReview@v1.0.10
+      - uses: anc95/ChatGPT-CodeReview@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
