--- a/.github/workflows/phpmd.yml
+++ b/.github/workflows/phpmd.yml
@@ -1,23 +1,23 @@
-name: PHPMD
+# name: PHPMD
 
-on: push
+# on: push
 
-jobs:
-  phpmd:
-    name: PHPMD
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+# jobs:
+#   phpmd:
+#     name: PHPMD
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v3
 
-      - name: Setup PHP environment
-        uses: shivammathur/setup-php@v2
-        with:
-          coverage: none
-          tools: phpmd
+#       - name: Setup PHP environment
+#         uses: shivammathur/setup-php@v2
+#         with:
+#           coverage: none
+#           tools: phpmd
 
-      - name: Install composer
-        run: composer install
+#       - name: Install composer
+#         run: composer install
 
-      - name: Run PHPMD
-        run: vendor/bin/phpmd . github phpmd.ruleset.xml --exclude 'tests/*,vendor/*'
+#       - name: Run PHPMD
+#         run: vendor/bin/phpmd . github phpmd.ruleset.xml --exclude 'tests/*,vendor/*'
