--- a/.github/workflows/chatGPT_codeReview.yml
+++ b/.github/workflows/chatGPT_codeReview.yml
@@ -13,6 +13,6 @@ jobs:
         with:
           number: ${{ github.event.pull_request.number }}
           sessionToken: ${{ secrets.CHATGPT_SESSION_TOKEN }}
-          split: 'true'  # Use true to enable the unstable split feature.
+          split: true  # Use true to enable the unstable split feature.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
