--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -3,8 +3,11 @@ name: ChatGPT CodeReviewer
 permissions:
   contents: read
   pull-requests: write
+  push: write
 
 on:
+  push:
+    branches: [ "*" ]
   pull_request:
     # branches: [ "main" ]
     types: [opened, reopened, synchronize]
