--- a/.github/workflows/phpmd.yml
+++ b/.github/workflows/phpmd.yml
@@ -1,6 +1,14 @@
 name: PHP Mess Detector
 
-on: push
+on:
+  push:
+    branches: [ "*" ]
+  pull_request:
+    branches: [ "*" ]
+
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
   phpmd:
