--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -10,6 +10,10 @@ on:
   pull_request:
     branches: [ "*" ]
 
+permissions:
+  contents: read
+  pull-requests: write
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
