--- a/.github/workflows/phpcdp.yml
+++ b/.github/workflows/phpcdp.yml
@@ -3,8 +3,8 @@ name: PHP Copy Past Detector
 on:
   push:
     branches: [ "*" ]
-  pull_request:
-    branches: [ "*" ]
+  # pull_request:
+  #   branches: [ "*" ]
 
 permissions:
   contents: read
