--- a/.github/workflows/phpmd.yml
+++ b/.github/workflows/phpmd.yml
@@ -1,14 +1,6 @@
 name: PHP Mess Detector
 
-on:
-  push:
-    branches: [ "*" ]
-  pull_request:
-    branches: [ "*" ]
-
-permissions:
-  contents: read
-  pull-requests: write
+on: push
 
 jobs:
   phpmd:
