--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -7,12 +7,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "*" ]
-  pull_request:
-    branches: [ "*" ]
-
-permissions:
-  contents: read
-  pull-requests: write
+  # pull_request:
+  #   branches: [ "*" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,4 +30,4 @@ jobs:
         run: composer install
 
       - name: Execute static analysis [phpstan]
-        run: vendor/bin/phpstan analyse src/ -l 9
+        run: vendor/bin/phpstan analyse --no-progress src/ -l 9
