--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -22,7 +22,7 @@ jobs:
           # Optional
           LANGUAGE: Portuguese
           OPENAI_API_ENDPOINT: https://api.openai.com/v1
-          MODEL: gpt-3.5-turbo
+          MODEL: gpt-3.5-turbo-16k
           PROMPT:
           top_p: 1
           temperature: 1
